--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -4,13 +4,7 @@ import { Container } from './container';
 
 <Container>
   <footer class="footer">
-    <p class="line">
-      Source code on <a href="https://github.com/remvze/timesy">GitHub</a>
-    </p>
-
-    <p class="line">
-      Created by <a href="https://twitter.com/remvze">Maze ✦</a>
-    </p>
+    <p class="line">Created by ✦ goDanielgo ✦</p>
   </footer>
 </Container>
 
@@ -23,6 +17,7 @@ import { Container } from './container';
     & .line {
       font-size: var(--font-sm);
       color: var(--color-foreground-subtle);
+      text-align: center;
 
       &:not(:last-of-type) {
         margin-bottom: 8px;
