--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -5,15 +5,14 @@ import { Container } from './container';
 <div class="hero">
   <Container>
     <img
-      alt="Timesy Logo"
+      alt="Timurr Logo"
       class="logo"
-      height={45}
+      height={250}
       src="/logo.svg"
-      width={38.97}
+      width={250}
     />
 
-    <h2 class="title">Timesy</h2>
-    <h1 class="desc">A distraction-free online timer.</h1>
+    <h1 class="desc">A distraction-free timer for the complex ADHD mind</h1>
   </Container>
 </div>
 
@@ -25,7 +24,8 @@ import { Container } from './container';
 
     & .logo {
       display: block;
-      height: 45px;
+
+      /* height: 45px; */
       margin: 0 auto;
       margin-bottom: 12px;
     }
