--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -10,9 +10,12 @@ interface Props {
   title?: string;
 }
 
-const title = Astro.props.title || 'Timesy: A Distraction-Free Online Timer';
+const title =
+  Astro.props.title ||
+  'Timurr: A Distraction-Free Timer designed for the complex ADHD mind';
 const description =
-  Astro.props.description || `A Distraction-free Online Timer.`;
+  Astro.props.description ||
+  `A Distraction-Free Timer designed for the complex ADHD mind`;
 ---
 
 <!doctype html>
@@ -30,10 +33,10 @@ const description =
 
     <meta content={title} property="og:title" />
     <meta content={description} property="og:description" />
-    <meta content="Timesy" property="og:site_name" />
-    <meta content="https://timesy.mvze.net" property="og:url" />
+    <meta content="Timurr" property="og:site_name" />
+    <meta content="https://timurr.murmurs.stream" property="og:url" />
     <meta content="website" property="og:type" />
-    <meta content="https://timesy.mvze.net/og.png" property="og:image" />
+    <meta content="https://timurr.murmurs.stream/og.png" property="og:image" />
 
     <meta content="summary_large_image" name="twitter:card" />
 
